--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 
 <% provide(:title, 'Contact Us') %>
-<h1>Contact Us</h1>
+<h1>Contact</h1>
 
 <p> 
 	you can contact us (Bimbola Oyewunmi and his imagenary workers) at 780-880-0193
